--- a/embold-blue.com/product-overview.html
+++ b/embold-blue.com/product-overview.html
@@ -26,7 +26,9 @@
   <div class="container block block-header-sub">
     <div class="row">
       <div class="col-6">
-        <h1 class="header-sub-title">Project Overview</h1>
+        <h1 class="header-sub-title">
+          The friendly <strong>AI powered</strong> Static Analysis Platform
+        </h1>
       </div>
     </div>
     <div class="header-image bg-product-overview"></div>
@@ -36,15 +38,110 @@
     <div class="row">
       <div class="col-6">
         <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Bug Prediction</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+        <h2 class="section-title">Simple, Powerful, Friendly</h2>
+        <p class="description">Designed to be beautiful. We put a lot of heart into making the developer and user experience as simple, clean and powerful as humanly possible. It works for and impresses everyone from the developer to the busy CTO.
+          <ul>
+            <li>
+              Powerful Visualizations
+            </li>
+            <li>
+              The simple way to interact with your code
+            </li>
+            <li>
+              Made to be understood by managers
+            </li>
+            <li>
+              The last static analysis tool you will ever use
+            </li>
+          </ul>
+        </p>
       </div>
       <div class="col-5">
         <div class="il-product-overview-ruleless-static background-no-repeat body-illustration"></div>
       </div>
     </div>
   </section>
-  <a name="recommendation"></a>
+  <section class="container block block-section-sub block-section-right">
+    <div class="row">
+      <div class="col-1">
+
+      </div>
+      <div class="col-5">
+        <div class="il-alt background-no-repeat body-illustration"></div>
+      </div>
+      <div class="col-6">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title">Write Better Code Faster</h2>
+        <p class="description">It was never easier to write good code this fast. </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="container block block-section-sub block-section-left">
+    <div class="row">
+      <div class="col-6">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title">A.I. inside - More than analytics</h2>
+        <p class="description">embold is designed to be the most beautiful and user-friendly platform of its kind. By using powerful visualizations, design and A.I. to augment the development and code review process for everyone, we make static analysis accessible to all stakeholders. From the developer to the busy CTO.
+          <ul>
+            <li>
+              ~
+            </li>
+            <li>
+              ~
+            </li>
+            <li>
+              ~
+            </li>
+            <li>
+              ~
+            </li>
+          </ul>
+        </p>
+      </div>
+      <div class="col-5">
+        <div class="il-product-overview-ruleless-static background-no-repeat body-illustration"></div>
+      </div>
+    </div>
+  </section>
+  <a name="scoring"></a>
+  <section class="container block block-section-sub block-section-left">
+    <div class="row">
+      <div class="col-6">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title">Integrates well</h2>
+        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+      </div>
+      <div class="col-5">
+        <div class="il-alt background-no-repeat body-illustration"></div>
+      </div>
+    </div>
+  </section>
+
+  <section class="container block block-section-sub">
+    <div class="row">
+      <div class="col-2">
+
+      </div>
+      <div class="col-8">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title" style="color:blue;font-size:2.4em;">More than Analysis</h2>
+        <p class="description">embold is designed to be the most beautiful and user-friendly platform of its kind. By using powerful visualizations, design and A.I. to augment the development and code review process for everyone, we make static analysis accessible to all stakeholders. From the developer to the busy CTO.</p>
+      </div>
+    </div>
+  </section>
+  <section class="container block block-section-sub block-section-left">
+    <div class="row">
+      <div class="col-6">
+        <!-- <h4>Language Support</h4> -->
+        <h2 class="section-title">Bug Prediction</h2>
+        <p class="description">embold is designed to be the most beautiful and user-friendly platform of its kind. By using powerful visualizations, design and A.I. to augment the development and code review process for everyone, we make static analysis accessible to all stakeholders. From the developer to the busy CTO.</p>
+      </div>
+      <div class="col-5">
+        <div class="il-product-overview-ruleless-static background-no-repeat body-illustration"></div>
+      </div>
+    </div>
+  </section>
   <section class="container block block-section-sub block-section-right">
     <div class="row">
       <div class="col-1">
@@ -65,27 +162,11 @@
     <div class="row">
       <div class="col-6">
         <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Scoring and A.I. Base Priorization</h2>
+        <h2 class="section-title">Intelligent Refactoring</h2>
         <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
       <div class="col-5">
         <div class="il-alt background-no-repeat body-illustration"></div>
-      </div>
-    </div>
-  </section>
-  <a name="refactoring"></a>
-  <section class="container block block-section-sub block-section-right">
-    <div class="row">
-      <div class="col-1">
-
-      </div>
-      <div class="col-5">
-        <div class="il-alt background-no-repeat body-illustration"></div>
-      </div>
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Refactoring</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
     </div>
   </section>
