add button in nav

--- a/embold-blue.com/index.html
+++ b/embold-blue.com/index.html
@@ -394,6 +394,10 @@
         <li class="primary-menu"><a href="#">Resources</a></li>
         <li class="primary-menu"><a href="#">Company</a></li>
       </ul><!-- /.main nav -->
+      <div class="wrap-sign">
+        <button class="btn btn-md btn-secondary btn-sign-up" id="mobile-nav--close">Try it, Free!</button>
+        <a href="#" class="btn-text">Sign-in</a>
+      </div>
     </div><!-- /.full menu middle -->
   </div>
   <div class="nav-mobile-full-screen nav-mobile-full-screen--sub nav-mobile-full-screen--product" id="nav-mobile-full-screen--product">
