--- a/embold-blue.com/solutions-user-roles-pm.html
+++ b/embold-blue.com/solutions-user-roles-pm.html
@@ -24,6 +24,11 @@
 </head>
 <body>
   <div class="nav-solutions"></div>
+  <div class="nav-mobile" id="nav-mobile">
+    <a href="index.html"><img src="images/logo-embold.svg" width="100" /></a>
+    <button class="menu-toggle btn-mobile-nav"></button>
+  </div>
+
   <div class="wrap-sub-menu-alt">
     <div class="container">
       <div class="row">
@@ -346,6 +351,7 @@
       </div>
     </div>
   </div>
+  <div class="nav-mobile-full-screen" id="nav-mobile-full-screen-top"></div>
   <script src="js/main.js" type="text/javascript"></script>
   <script>
   $(window).on("scroll", function() {
