--- a/embold-blue.com/company-news.html
+++ b/embold-blue.com/company-news.html
@@ -24,6 +24,10 @@
 </head>
 <body class="company-news">
   <div class="nav-company"></div>
+  <div class="nav-mobile" id="nav-mobile">
+    <a href="index.html"><img src="images/logo-embold.svg" width="100" /></a>
+    <button class="menu-toggle btn-mobile-nav"></button>
+  </div>
 
   <div class="block block-header-sub header-resource-product bg-resources-product background-no-repeat">
     <div class="row">
@@ -366,6 +370,7 @@
       </div>
     </div>
   </div>
+  <div class="nav-mobile-full-screen" id="nav-mobile-full-screen-top"></div>
   <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
