--- a/embold-blue.com/company-team.html
+++ b/embold-blue.com/company-team.html
@@ -22,6 +22,10 @@
 </head>
 <body>
   <div class="nav-company"></div>
+  <div class="nav-mobile" id="nav-mobile">
+    <a href="index.html"><img src="images/logo-embold.svg" width="100" /></a>
+    <button class="menu-toggle btn-mobile-nav"></button>
+  </div>
 
   <div class="container block block-header-sub">
     <div class="row">
@@ -313,6 +317,7 @@
       </div>
     </div>
   </div>
+  <div class="nav-mobile-full-screen" id="nav-mobile-full-screen-top"></div>
   <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
