--- a/embold-blue.com/index.html
+++ b/embold-blue.com/index.html
@@ -5,7 +5,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>embold | Next Generation Static Analysis Tool</title>
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="css/embold.css">
-  <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="css/media-query.css">
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="css/simple-grid.css">
   <link rel="stylesheet" href="https://use.typekit.net/cwa2ewg.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
@@ -25,7 +24,7 @@
 <body class="index">
   <div class="nav-index"></div>
   <div class="nav-mobile" id="nav-mobile">
-    <img src="images/logo-embold.svg" width="100" />
+    <a href="index.html"><img src="images/logo-embold.svg" width="100" /></a>
     <button class="menu-toggle btn-mobile-nav"></button>
   </div>
   <div class="container">
@@ -384,35 +383,7 @@
     </div>
   </div>
   <div class="intercom"></div>
-  <div class="nav-mobile-full-screen" id="nav-mobile-full-screen-top">
-    <div class="nav-mobile-full-screen--middle">
-      <img src="images/logo-embold-wh.svg" width="120" height="auto" class="logo-embold" />
-      <button class="menu-toggle menu-toggle--close mobile-nav--close" id="mobile-nav--close"><img src="images/ic-md-close-wh.svg" width="24" /></button>
-      <ul class="mobile-main-nav">
-        <li class="primary-menu" id="menu-toggle-product"><a href="#">Product</a></li>
-        <li class="primary-menu"><a href="#">Use Cases</a></li>
-        <li class="primary-menu"><a href="#">Resources</a></li>
-        <li class="primary-menu"><a href="#">Company</a></li>
-      </ul><!-- /.main nav -->
-      <div class="wrap-sign">
-        <button class="btn btn-md btn-secondary btn-sign-up" id="mobile-nav--close">Try it, Free!</button>
-        <a href="#" class="btn-text">Sign-in</a>
-      </div>
-    </div><!-- /.full menu middle -->
-  </div>
-  <div class="nav-mobile-full-screen nav-mobile-full-screen--sub nav-mobile-full-screen--product" id="nav-mobile-full-screen--product">
-    <div class="nav-mobile-full-screen--middle">
-      <div class="title" id="close-2nd-menu">
-        Product
-      </div>
-      <button class="menu-toggle--close mobile-nav--close" id="mobile-nav--close"><img src="images/ic-md-close-wh.svg" width="24" /></button>
-      <ul class="mobile-main-nav">
-        <li ><a href="#">About Gamma</a></li>
-        <li ><a href="#">Use Cases</a></li>
-        <li ><a href="#">Pricing</a></li>
-      </ul><!-- /.main nav -->
-    </div><!-- /.full menu middle -->
-  </div>
+  <div class="nav-mobile-full-screen" id="nav-mobile-full-screen-top"></div>
   <script src="js/main.js" type="text/javascript"></script>
 </body>
 </html>
