--- a/embold-blue.com/nav-resources.html
+++ b/embold-blue.com/nav-resources.html
@@ -65,39 +65,39 @@
     </div>
     <div class="nav-wrap-items">
       <div class="nav-item-main">
-        <a href="user-stories-user-roles.html" class="nav-menu-link">By User Role</a>
+        <a href="solutions-user-roles.html" class="nav-menu-link">By User Role</a>
         <ul class="nav-item-sub-list">
-          <li><a href="user-stories-user-roles.html">Executives</a></li>
-          <li><a href="user-stories-user-roles-developers.html">Developers</a></li>
-          <li><a href="user-stories-user-roles-architects.html">Architects</a></li>
-          <li><a href="user-stories-user-roles-pm.html">Project Managers</a></li>
+          <li><a href="solutions-user-roles.html">Executives</a></li>
+          <li><a href="solutions-user-roles-developers.html">Developers</a></li>
+          <li><a href="solutions-user-roles-architects.html">Architects</a></li>
+          <li><a href="solutions-user-roles-pm.html">Project Managers</a></li>
         </ul>
       </div>
       <div class="nav-item-main">
-        <a href="user-stories-team-size.html" class="nav-menu-link">By Team Size</a>
+        <a href="solutions-team-size.html" class="nav-menu-link">By Team Size</a>
         <ul class="nav-item-sub-list">
-          <li><a href="user-stories-user-roles-team-size.html">Teams</a></li>
-          <li><a href="user-stories-user-roles-team-size-business.html">Business</a></li>
-          <li><a href="user-stories-user-roles-team-size-enterprise.html">Enterprise</a></li>
+          <li><a href="solutions-team-size.html">Teams</a></li>
+          <li><a href="solutions-team-size-business.html">Business</a></li>
+          <li><a href="solutions-team-size-enterprise.html">Enterprise</a></li>
         </ul>
       </div>
       <div class="nav-item-main">
-        <a href="user-stories-industry.html" class="nav-menu-link">By Industry</a>
+        <a href="solutions-industry.html" class="nav-menu-link">By Industry</a>
         <ul class="nav-item-sub-list">
-          <li><a href="user-stories-industry.html">Automotive</a></li>
-          <li><a href="user-stories-industry-financial.html">Financial</a></li>
-          <li><a href="user-stories-industry-industrial.html">Industrial</a></li>
-          <li><a href="user-stories-industry-tt.html">Technology/Telecom</a></li>
-          <li><a href="user-stories-industry-others.html">Others</a></li>
+          <li><a href="solutions-industry.html">Automotive</a></li>
+          <li><a href="solutions-industry-financial.html">Financial</a></li>
+          <li><a href="solutions-industry-industrial.html">Industrial</a></li>
+          <li><a href="solutions-industry-tt.html">Technology/Telecom</a></li>
+          <li><a href="solutions-industry-others.html">Others</a></li>
         </ul>
       </div>
       <div class="nav-item-main">
-        <a href="user-stories-solution-approach.html" class="nav-menu-link">Solution Approach</a>
+        <a href="solutions-solution-approach.html" class="nav-menu-link">Solution Approach</a>
         <ul class="nav-item-sub-list">
-          <li><a href="user-stories-solution-approach.html#">Deployment Options</a></li>
-          <li><a href="user-stories-solution-approach.html#">Solution Engineerings Approach</a></li>
-          <li><a href="user-stories-solution-approach.html#">Service Offerings</a></li>
-          <li><a href="user-stories-solution-approach.html#">Customer Success</a></li>
+          <li><a href="solutions-solution-approach.html#">Deployment Options</a></li>
+          <li><a href="solutions-solution-approach.html#">Solution Engineerings Approach</a></li>
+          <li><a href="solutions-solution-approach.html#">Service Offerings</a></li>
+          <li><a href="solutions-solution-approach.html#">Customer Success</a></li>
         </ul>
       </div>
       <div class="cb"></div>
