--- a/embold-blue.com/solutions-user-roles.html
+++ b/embold-blue.com/solutions-user-roles.html
@@ -66,24 +66,37 @@
             <img src="./images/ic-md-arrow-slim-right.svg" width="40" height="40" /><br />
             Select a your role
           </div>
-          <div class="tab-wrap">
-            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-architects.html'">
-              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Architects</span>
-            </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles.html'">
-              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Executive</span>
-            </div>
-            <div class="tab-item active" onclick="window.location.href='./user-stories-user-roles-developers.html'">
-              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Developers</span>
-            </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-pm.html'">
-              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Product Managers</span>
-            </div>
-          </div>
+          <ul class="tab-wrap">
+            <li class="tab-item init active">
+              <img src="images/ic-sm-user-executive.svg" width="24" /> Executive
+            </li>
+            <li class="tab-item">
+              <img src="images/ic-sm-user-developer.svg" width="24" /> Developers
+            </li>
+            <li class="tab-item">
+              <img src="images/ic-sm-user-architect.svg" width="24" /> Architects
+            </li>
+            <li class="tab-item">
+              <img src="images/ic-sm-user-pm.svg" width="24" />Product Managers
+            </li>
+          </ul>
         </div>
       </div>
     </div>
   </div>
+  <script>
+    $("ul.tab-wrap").on("click", ".init", function() {
+      $(this).closest("ul").children('li:not(.init)').toggle();
+    });
+
+    var allOptions = $("ul").children('li:not(.init)');
+    $("ul.tab-wrap").on("click", "li:not(.init)", function() {
+      allOptions.removeClass('selected');
+      $(this).addClass('selected');
+      $("ul").children('.init').html($(this).html());
+      allOptions.toggle();
+    });
+  </script>
 
   <section class="block block-sub-user-stories">
     <div class="container">
@@ -197,7 +210,7 @@
           <div class="block-user-story">
             <div class="user-story wrap-content-alt">
               <div class="tab-user-story">
-                <div class="tab-item active" style="margin-bottom: 0.5em; width: 19em;">
+                <div class="tab-item active">
                   <div class="logo logo-small-deutsche-leasing">
                   </div>
                   <div class="case-number">
@@ -207,7 +220,7 @@
                     Core Development Platform
                   </div>
                 </div>
-                <div class="tab-item" style="margin-bottom: 0.5em; width: 19em;">
+                <div class="tab-item">
                   <div class="logo logo-small-deutsche-leasing">
                   </div>
                   <div class="case-number">
@@ -217,7 +230,7 @@
                     Core Development Platform
                   </div>
                 </div>
-                <div class="tab-item" style="margin-bottom: 0.5em; width: 19em;">
+                <div class="tab-item">
                   <div class="logo logo-small-deutsche-leasing">
                   </div>
                   <div class="case-number">
